Add bndl entries to hyprland.conf - enables: laptop internal display disable / enable with lid

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -51,6 +51,9 @@ bind = SUPER SHIFT, X, exec, $webapp="https://x.com/compose/post"
 # Note: You must relaunch Hyprland after changing envs (use Super+Esc, then Relaunch)
 # env = MY_GLOBAL_ENV,setting
 
+bindl=,switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disable"
+bindl=,switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1, preferred, auto, auto"
+
 # Control your input devices
 # See https://wiki.hypr.land/Configuring/Variables/#input
 input {
